--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,7 @@
   </style>
 </head>
 <body>
-  <h2>Reconocimiento de herramientas</h2>
+  <h2>Reconocimiento de objetos</h2>
   <video id="video" autoplay playsinline></video>
 
   <div class="slider-container">
